--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZmFpci10YXJwb24tNzMuY2xlcmsuYWNjb3VudHMuZGV2JA
 
-BACKEND_URL=http://localhost:5000
+BACKEND_URL=https://sou9maghrib-api.onrender.com
